namespace java com.github.mistertea.boardgame.core

struct DieRoll {
  1:i32 numDice,
  2:i32 dieSize,
  3:i32 modifier,
}
